feat(event-service) create entity: - create - update - list by id - list all

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <modules>
         <module>user-service</module>
         <module>common</module>
+        <module>api-gateway</module>
+        <module>event-service</module>
     </modules>
     <packaging>pom</packaging>
 	<url/>
