--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
         <module>common</module>
         <module>api-gateway</module>
         <module>event-service</module>
+        <module>ticket-service</module>
+        <module>order-service</module>
+        <module>payment-service</module>
+        <module>notification-service</module>
     </modules>
     <packaging>pom</packaging>
 	<url/>
